Bug 413880 - Cannot find Plasma widgets on start page
Summary: Cannot find Plasma widgets on start page
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.16.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2019-11-06 15:50 UTC by Alexander Potashev
Modified: 2019-11-08 17:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-11-06 15:50:30 UTC
SUMMARY
Cannot find Plasma widgets on start page.

STEPS TO REPRODUCE
1. Install Plasma widget "Fokus" ( http://store.kde.org/p/1308861 )
2. Run Plasma Discover
3. Press Ctrl+F
4. Type in "fokus", press Enter

OBSERVED RESULT
Nothing is found.

EXPECTED RESULT
Should find the Plasma widget "Fokus".

SOFTWARE/OS VERSIONS
Operating System: Fedora 31
KDE Plasma Version: 5.16.5
KDE Frameworks Version: 5.61.0
Qt Version: 5.12.5
Kernel Version: 5.3.7-301.fc31.x86_64
OS Type: 64-bit
Processors: 2 × Intel® Celeron® CPU B800 @ 1.50GHz
Memory: 3,8 ГиБ

ADDITIONAL INFORMATION
If I enter the Plasma extensions section in Discover first, then search for "fokus", then it finds the widget.
Comment 1 Alexander Potashev 2019-11-06 15:54:27 UTC
> If I enter the Plasma extensions section in Discover first, then search for "fokus", then it finds the widget.

Also, this Fokus widget item found in Discover has an "Install" button, even though it is already installed.
Comment 2 Nate Graham 2019-11-07 14:48:21 UTC
We did this intentionally a few releases back (see Bug 399503) because the list of addons was cluttering up the list of apps, and we made the assumption that if you wanted to find an addon, you would navigate to one of the addons page first. Maybe that was a bad assumption.
Comment 3 Alexander Potashev 2019-11-07 14:54:45 UTC
(In reply to Nate Graham from comment #2)
> We did this intentionally a few releases back (see Bug 399503) because the
> list of addons was cluttering up the list of apps, and we made the
> assumption that if you wanted to find an addon, you would navigate to one of
> the addons page first. Maybe that was a bad assumption.

There won't be clutter if you list the apps first, then the addons on the bottom of the list.
Comment 4 Nate Graham 2019-11-07 15:02:20 UTC
In fact in testing a reversion of that change, apps are indeed listed first. Seems reasonable.
Comment 5 Nate Graham 2019-11-07 15:03:42 UTC
Patch: https://phabricator.kde.org/D25196
Comment 6 Nate Graham 2019-11-08 17:50:31 UTC
Git commit 11d79794b58e0852e2da1568bf2babee1d372396 by Nate Graham.
Committed on 08/11/2019 at 17:50.
Pushed by ngraham into branch 'master'.

Perform KNS searches from the Featured page again

Summary:
We previously disabled this in https://bugs.kde.org/show_bug.cgi?id=399503 to improve
the relevancy of the search results. However since then, searching has been improved in
various other ways. For example, exact title matches are now shown first, and apps are
shown before KNS entries. Therefore, it seems reasonable to re-enable KNS searches from
the Featured page.
FIXED-IN: 5.18.0

Test Plan: Can now find "Fokus" from a search inittated while viewing the Featured page.

Reviewers: apol, #discover_software_store

Subscribers: aspotashev, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D25196

M  +1    -1    libdiscover/backends/KNSBackend/KNSBackend.cpp

https://commits.kde.org/discover/11d79794b58e0852e2da1568bf2babee1d372396