Perform KNS searches from the Featured page again

Summary:
We previously disabled this in https://bugs.kde.org/show_bug.cgi?id=399503 to improve
the relevancy of the search results. However since then, searching has been improved in
various other ways. For example, exact title matches are now shown first, and apps are
shown before KNS entries. Therefore, it seems reasonable to re-enable KNS searches from
the Featured page.

BUG: 413880
FIXED-IN: 5.18.0

Test Plan: Can now find "Fokus" from a search inittated while viewing the Featured page.

Reviewers: apol, #discover_software_store

Subscribers: aspotashev, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D25196